--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="description" content="description">
 		<meta name="author" content="DCM">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="plugins/bootstrap/bootstrap.css" rel="stylesheet">
+		<link href="js/bootstrap/bootstrap.css" rel="stylesheet">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
 
@@ -26,9 +26,9 @@
 				<script src="http://getbootstrap.com/docs-assets/js/html5shiv.js"></script>
 				<script src="http://getbootstrap.com/docs-assets/js/respond.min.js"></script>
 		<![endif]-->
-		<script src="plugins/jquery/jquery.min.js"></script>
+		<script src="js/jquery/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="plugins/bootstrap/bootstrap.min.js"></script>
+		<script src="js/bootstrap/bootstrap.min.js"></script>
 
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-route/angular-route.js"></script>
